# OCR-XDF

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  提示词.md  需求.md
history/: 2026-04-30 11-33-36_1.json  2026-05-01 07-24-40_2.json  2026-05-01 07-24-44_3.json  2026-05-01 07-25-44_4.json  2026-05-01 07-26-44_5.json  2026-05-01 07-27-44_6.json  2026-05-01 07-29-04_7.json  2026-05-01 07-29-49_8.json  2026-05-01 07-30-04_9.json  2026-05-01 07-31-04_10.json  2026-05-01 07-32-04_11.json  2026-05-01 09-31-42_12.json  2026-05-01 09-32-42_13.json  2026-05-01 09-33-42_14.json  2026-05-01 09-34-42_15.json  2026-05-01 09-35-42_16.json  2026-05-01 12-11-35_17.json  2026-05-01 13-35-54_18.json  2026-05-01 13-36-23_19.json  2026-05-01 13-54-09_20.json  2026-05-01 13-54-39_21.json  2026-05-01 13-55-39_22.json  2026-05-01 13-56-39_23.json  2026-05-01 13-57-39_24.json  2026-05-01 13-58-39_25.json  2026-05-01 13-59-39_26.json  2026-05-01 14-00-39_27.json  2026-05-01 15-03-47_28.json  2026-05-01 15-04-42_29.json  2026-05-03 22-09-16_30.json  2026-05-03 22-09-51_31.json  2026-05-03 22-21-12_32.json  2026-05-03 22-21-26_33.json  2026-05-03 22-22-39_34.json  2026-05-03 22-47-58_35.json  2026-05-03 22-48-16_36.json  2026-05-03 22-49-16_37.json  2026-05-03 22-50-16_38.json  2026-05-03 22-51-16_39.json  2026-05-03 22-52-16_40.json  (+167 more)
modules/: config.py  extractor.py
src/: __main__.py  main_window.py
src/modules/: config.py  extractor.py  history.py  screenshot.py  theme.py
src/ui/: history_dialog.py  region_selector.py  (+1 more)
ui/: region_selector.py  settings_dialog.py
